--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sistema Academia</title>
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    body { font-family: Arial, sans-serif; margin: 2rem; }
+    form { display: flex; flex-direction: column; max-width: 300px; }
+    input { margin-bottom: 0.5rem; padding: 0.5rem; }
+    button { padding: 0.5rem; }
+  </style>
+</head>
+<body>
+  <h1>Bem-vindo ao Sistema da Academia</h1>
+  <form id="login-form">
+    <label for="email">Email</label>
+    <input type="email" id="email" required />
+    <label for="senha">Senha</label>
+    <input type="password" id="senha" required />
+    <button type="submit">Entrar</button>
+  </form>
+  <script src="./script.js"></script>
+</body>
+</html>
